[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
failure = "0.1.8"
log = "0.4.21"
rust-crypto = "0.2.36"
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
sled = "0.34.7"
